# remote-compose-rs

./: .envrc  .gitignore  Cargo.toml  GEMINI.md  README.md  flake.nix
crates/core/: Cargo.toml  color_filter1_inspect.txt  output.txt  test_output_1.txt  touch_ops.txt
crates/core/examples/: basic_click_action.rc  basic_click_action_param.rc  color_filter1.rc  color_filter2.rc  inspect.rs  intrinsics1.rc  intrinsics2.rc  layout_and_values.rc  simple.rc  touch.rc
crates/core/src/: document.rs
crates/core/src/operations/: actions.rs  canvas.rs  header.rs  layouts.rs  mod.rs  modifiers.rs  paint.rs  primitives.rs  semantics.rs  state.rs
crates/core/tests/: androidx_samples.rs  component_value_test.rs  draw_line_test.rs  draw_rect_test.rs  layout_ops_test.rs  layout_root_test.rs  matrix_translate_test.rs  modifier_padding_test.rs  paint_values_test.rs  tree_color_filter1.rs  tree_simple.rs  tree_touch.rs
crates/expressions/: Cargo.toml
crates/expressions/src/: context.rs  expression.rs  lib.rs  opcode.rs  parser.rs  remote_path.rs  utils.rs
crates/expressions/tests/: androidx.rs  remote_path_test.rs
